[project]
name = "dj-flux2"
version = "0.1.0"
description = "Minimal FLUX.2 Klein 4B inference with CUDA support"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
  { name = "DJ", email = "dj@example.com" }
]
license = "MIT"

dependencies = [
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "einops>=0.8.1",
  "transformers>=4.56.1",
  "safetensors>=0.4.5",
  "pillow>=10.0.0",
  "huggingface-hub>=0.36.0",
  "accelerate>=1.0.0",
  "spandrel>=0.4.0",
  "PySide6>=6.6.0",
]

[project.scripts]
dj-flux2 = "generate_image:main"
dj-flux2-generate = "generate_image:main"
dj-flux2-upscale = "upscale_image:main"
dj-flux2-download = "download_models:main"
dj-flux2-gui = "gui_generate:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "only-managed"

[tool.setuptools]
# Include the main scripts as modules
py-modules = ["generate_image", "upscale_image", "download_models", "gui_generate"]
packages = []
