[project]
name = "dj-flux2"
version = "1.4.1"
description = "Minimal FLUX.2 Klein 4B inference with GPU support (NVIDIA/CUDA and AMD/ROCm)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "DJ", email = "dj@example.com" }
]
license = "MIT"

dependencies = [
  "einops>=0.8.1",
  "transformers>=4.56.1",
  "safetensors>=0.4.5",
  "pillow>=10.0.0",
  "huggingface-hub>=0.36.0",
  "accelerate>=1.0.0",
  "spandrel>=0.4.0",
  "PySide6>=6.6.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  # triton has no official Windows wheels; triton-windows is the community port.
  # It provides the same API and is required by transformers' FP8 quantization
  # (used by the Qwen3-4B-FP8 text encoder). Not needed on Linux, which gets
  # triton directly as a torch dependency.
  "triton-windows>=3.6.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Install exactly one of these extras depending on your GPU backend:
#   ./setup cpu          (no GPU, for testing only)
#   ./setup cuda         (NVIDIA GPU, CUDA 12.6)
#   ./setup rocm         (AMD GPU, ROCm 7.2 stable)
#   ./setup rocm-nightly (AMD GPU, ROCm 7.13 nightly — for RDNA4 / gfx120X)
#
# rocm-nightly is NOT a uv extra — it is handled entirely by `./setup rocm-nightly`
# which uses `uv pip install --index-url` to bypass the lockfile. This is necessary
# because the nightly index uses pre-release local version specifiers that uv cannot
# resolve at lock time alongside the stable extras.
cpu  = ["torch>=2.12.0", "torchvision>=0.27.0"]
cuda = ["torch>=2.12.0", "torchvision>=0.27.0"]
rocm = ["torch>=2.12.0", "torchvision>=0.27.0", "triton-rocm>=3.7.0; sys_platform == 'linux'"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "only-managed"
# Declare the GPU extras as mutually exclusive so uv can resolve them independently.
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "rocm" },
  ],
]

# Route torch/torchvision to the correct PyTorch index based on which extra is selected.
# Only one extra should be installed at a time.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",    extra = "cpu"  },
  { index = "pytorch-cu126",  extra = "cuda" },
  { index = "pytorch-rocm72", extra = "rocm" },
]
torchvision = [
  { index = "pytorch-cpu",    extra = "cpu"  },
  { index = "pytorch-cu126",  extra = "cuda" },
  { index = "pytorch-rocm72", extra = "rocm" },
]
triton-rocm = [
  { index = "pytorch-rocm72", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.setuptools]
packages = []
